# OrganiserPro

./: .coverage  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_GUIDE.md  CONTRIBUTORS.md  DEVELOPMENT.md  Dockerfile  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
OrganiserPro/: __init__.py  cli.py  commands.py  dedupe.py  py.typed  sorter.py
OrganiserPro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  make.bat
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
fileorganizer/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_dedupe.py  test_sorter.py
